# TrustHireEnv

./: .gitignore  Dockerfile  README.md  inference.py  pyproject.toml  requirements.txt
server/: app.py
