[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TrustHireEnv"
version = "1.0.2"
description = "OpenEnv benchmark for multimodal interview integrity and hiring workflow evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "openai>=1.0,<2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "server"]
