[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TrustHireEnv"
version = "1.0.3"
description = "OpenEnv benchmark for multimodal interview integrity"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic==2.12.5",
    "openai==2.12.0",
    "pyyaml==6.0.3",
    "rich==14.3.3",
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "openenv-core==0.2.3"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "server"]
